crates/tmark-writers/tests/snapshots/web__web__diag-label-duplicate.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
## A {#sec:a}

## B {#sec:a}
