crates/tmark-writers/tests/snapshots/web__web__diag-ref-ambiguous.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
---
press:
  sources:
    bibliography:
      stock: {type: misc, title: Stock}
---

<span id="stock">This claim</span> is cited as [?stock].
