crates/tmark-writers/tests/snapshots/web__web__diag-table-column-unknown.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
<table class="ts-table" data-ts-table="1" markdown="block">
<thead markdown="block">
<tr markdown="block">
<th markdown="span" rowspan="2">Year</th>
<th markdown="span" colspan="2">Actual</th>
</tr>
<tr markdown="block">
<th markdown="span">H1</th>
<th markdown="span">H2</th>
</tr>
</thead>
<tbody markdown="block">
<tr markdown="block">
<td markdown="span">2024</td>
<td markdown="span"></td>
<td markdown="span"></td>
</tr>
</tbody>
</table>
