crates/tmark-writers/tests/snapshots/web__web__diag-table-columns.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
<table class="ts-table" data-ts-table="1" markdown="block">
<thead markdown="block">
<tr markdown="block">
<th markdown="span">A</th>
</tr>
</thead>
<tbody markdown="block">
<tr markdown="block">
<td markdown="span">1</td>
</tr>
</tbody>
</table>
