crates/tmark-writers/tests/snapshots/web__web__diag-table-span.snap
---
source: crates/tmark-writers/tests/web.rs
expression: snapshot
---
<table class="ts-table" data-ts-table="1" markdown="block">
<thead markdown="block">
<tr markdown="block">
<th markdown="span">A</th>
<th markdown="span">B</th>
<th markdown="span">C</th>
<th markdown="span">D</th>
</tr>
</thead>
<tbody markdown="block">
<tr markdown="block">
<td markdown="span">r1</td>
<td markdown="span" rowspan="2" colspan="2">Block</td>
<td markdown="span">3</td>
</tr>
<tr markdown="block">
<td markdown="span">r2</td>
<td markdown="span">c</td>
</tr>
</tbody>
</table>
